# finmentor-llm

./: LICENSE  README.md  pyproject.toml
data/: finmentor_questions_v1.json
docs/: FINMENTOR_SYSTEM.md  safety_guardrails.md
finmentor/domain/concepts/: apr.yaml  compound_interest.yaml  credit_report.yaml  credit_score.yaml  interest_rate.yaml  loader.py  types.py  validator.py
finmentor/guardrails/: policy_router.py
finmentor/retrieval/: retriever.py  scoring.py
scripts/: debug_concepts.py  debug_retrieval.py  router_sanity_check.py
tests/: test_conceptcards_validation.py  test_policy_router.py  test_retrieval.py
